compiler/plc_ast/src/snapshots/plc_ast__source_location__tests__span_none.snap
---
source: compiler/plc_source/./src/source_location.rs
expression: loc1.span(&loc2)
---
SourceLocation {
    span: None,
}
