compiler/plc_ast/src/snapshots/plc_ast__source_location__tests__span_two_blocks_with_same_id.snap
---
source: compiler/plc_source/./src/source_location.rs
expression: loc1.span(&loc2)
---
SourceLocation {
    span: Block {
        local_id: 1,
        execution_order: Some(
            1,
        ),
        inner_range: None,
    },
}
