compiler/plc_ast/src/snapshots/plc_ast__source_location__tests__span_two_ranges.snap
---
source: compiler/plc_source/./src/source_location.rs
expression: loc1.span(&loc2)
---
SourceLocation {
    span: Range(
        TextLocation {
            line: 1,
            column: 0,
            offset: 0,
        }..TextLocation {
            line: 5,
            column: 30,
            offset: 10,
        },
    ),
}
